--- a/requirements.txt
+++ b/requirements.txt
@@ -1,37 +1,42 @@
 # This file is used by pip to install required python packages
 # Usage: pip install -r requirements.txt
 
-alembic==1.0.10
-asn1crypto==0.24.0
-bcrypt==3.1.6
+alembic==1.4.2
+bcrypt==3.1.7
 blinker==1.4
-cffi==1.12.3
-Click==7.0
-colorama==0.4.1
-coverage==4.5.3
-cryptography==2.7
+cffi==1.14.0
+click==7.1.1
+colorama==0.4.3
+coverage==5.1
+cryptography==2.9.2
+decorator==4.4.2
+dnspython==1.16.0
+email-validator==1.0.5
 Flask==1.0.2
-Flask-Bcrypt==0.7.1
 Flask-Login==0.4.0
 Flask-Mail==0.9.1
 Flask-Migrate==2.0.2
 Flask-Script==2.0.5
 Flask-SQLAlchemy==2.4.0
 Flask-User==1.0.1.5
-Flask-WTF==0.14.2
+Flask-WTF==0.14.3
+idna==2.9
+infinity==1.4
+intervals==0.8.1
 itsdangerous==1.1.0
-Jinja2==2.10.1
-Mako==1.0.10
+Jinja2==2.11.2
+Mako==1.1.2
 MarkupSafe==1.1.1
-passlib==1.7.1
-py==1.8.0
-pycparser==2.19
+passlib==1.7.2
+py==1.8.1
+pycparser==2.20
 pytest==3.0.5
 pytest-cov==2.4.0
-python-dateutil==2.8.0
+python-dateutil==2.8.1
 python-editor==1.0.4
-six==1.12.0
-SQLAlchemy==1.3.4
-Werkzeug==0.15.4
-WTForms==2.2.1
+six==1.14.0
+SQLAlchemy==1.3.16
+validators==0.14.3
+Werkzeug==1.0.1
+WTForms==2.3.1
 WTForms-Components==0.10.4
